fix(most): version1.0, with tested IoC and AOP functionalities